--- a/main.html
+++ b/main.html
@@ -10,7 +10,16 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+ <h1> Testimonials</h1>
+	<section class="test1">
+		<p >The Product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+		<p id="a">-John doe</p>
+		
+	 </section>
+	<section class="test2">
+	<p >The Product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+	<p id="a">John Smith</p>
+	</section>
 </body>
 
 </html>
