--- a/main.html
+++ b/main.html
@@ -11,15 +11,17 @@
     <script type="text/javascript" src="./script.js">
 </script>
  <h1> Testimonials</h1>
-	<section class="test1">
-		<p >The Product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+	<div >
+		<section class="test2">
+		The Product is amazing! I highly recommend it to anyone in need of a solution like this.
 		<p id="a">-John doe</p>
 		
 	 </section>
 	<section class="test2">
-	<p >The Product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+	The Product is amazing! I highly recommend it to anyone in need of a solution like this.
 	<p id="a">John Smith</p>
 	</section>
+	</div>
 </body>
 
 </html>
